# dynarmic

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt
src/backend/x64/: a32_emit_x64.cpp  a32_emit_x64.h  a32_exclusive_monitor.cpp  a32_interface.cpp  a32_jitstate.cpp  a32_jitstate.h  a64_emit_x64.cpp  a64_emit_x64.h  a64_exclusive_monitor.cpp  a64_interface.cpp  a64_jitstate.cpp  a64_jitstate.h  abi.cpp  abi.h  block_of_code.cpp  block_of_code.h  block_range_information.cpp  block_range_information.h  callback.cpp  callback.h  constant_pool.cpp  constant_pool.h  devirtualize.h  emit_x64.cpp  emit_x64.h  emit_x64_aes.cpp  emit_x64_crc32.cpp  emit_x64_data_processing.cpp  emit_x64_floating_point.cpp  emit_x64_packed.cpp  emit_x64_saturation.cpp  emit_x64_sm4.cpp  emit_x64_vector.cpp  emit_x64_vector_floating_point.cpp  emit_x64_vector_saturation.cpp  exception_handler.h  exception_handler_generic.cpp  exception_handler_macos.cpp  exception_handler_posix.cpp  exception_handler_windows.cpp  (+12 more)
src/backend_x64/: CMakeLists.txt  a32_emit_x64.cpp  a32_emit_x64.h  a32_interface.cpp  a32_jitstate.cpp  a32_jitstate.h  a64_emit_x64.cpp  a64_emit_x64.h  a64_exclusive_monitor.cpp  a64_interface.cpp  a64_jitstate.cpp  a64_jitstate.h  abi.cpp  abi.h  block_of_code.cpp  block_of_code.h  block_range_information.cpp  block_range_information.h  callback.cpp  callback.h  constant_pool.cpp  constant_pool.h  devirtualize.h  disassemble_x64.cpp  disassemble_x64.h  emit_x64.cpp  emit_x64.h  emit_x64_aes.cpp  emit_x64_crc32.cpp  emit_x64_data_processing.cpp  emit_x64_floating_point.cpp  emit_x64_packed.cpp  emit_x64_saturation.cpp  emit_x64_sm4.cpp  emit_x64_vector.cpp  emit_x64_vector_floating_point.cpp  exception_handler_generic.cpp  exception_handler_windows.cpp  hostloc.cpp  hostloc.h  (+11 more)
src/common/: CMakeLists.txt  address_range.h  aes.cpp  aes.h  assert.cpp  assert.h  bit_set.h  bit_util.h  cast_util.h  code_block.h  common_types.h  crc32.cpp  crc32.h  fp_util.h  intrusive_list.h  iterator_util.h  llvm_disassemble.cpp  llvm_disassemble.h  lut_from_list.h  macro_util.h  math_util.cpp  math_util.h  memory_pool.cpp  memory_pool.h  memory_util.cpp  mp.h  safe_ops.h  scope_exit.h  sm4.cpp  sm4.h  string_util.cpp  string_util.h  u128.cpp  u128.h  unlikely.h  variant_util.h
src/common/crypto/: aes.cpp  aes.h  crc32.cpp  crc32.h  sm4.cpp  sm4.h
src/common/fp/: fpcr.h  fpsr.h  fused.cpp  fused.h  info.h  mantissa_util.h  op.cpp  op.h  process_exception.cpp  process_exception.h  process_nan.cpp  process_nan.h  rounding_mode.h  unpacked.cpp  unpacked.h  util.h
src/common/logging/: log.cpp  log.h
src/common/mp/: append.h  bind.h  cartesian_product.h  concat.h  fapply.h  fmap.h  function_info.h  integer.h  list.h  lut.h  to_tuple.h  vlift.h  vllift.h
src/common/x64/: cpu_detect.cpp  emitter.cpp  emitter.h
src/daggen/: CMakeLists.txt  main.cpp  print_tuples.h
src/dynarmic/: CMakeLists.txt
src/dynarmic/backend/: exception_handler.h  exception_handler_generic.cpp  exception_handler_macos.cpp  exception_handler_posix.cpp
src/dynarmic/common/: assert.cpp  assert.h  atomic.h  bit_util.h  cast_util.h  common_types.h  intrusive_list.h  iterator_util.h  llvm_disassemble.cpp  llvm_disassemble.h  lut_from_list.h  macro_util.h  math_util.cpp  math_util.h  memory_pool.cpp  memory_pool.h  safe_ops.h  scope_exit.h  spin_lock.h  spin_lock_arm64.cpp  spin_lock_x64.cpp  string_util.h  u128.cpp  u128.h  unlikely.h  variant_util.h  x64_disassemble.cpp  x64_disassemble.h
src/dynarmic/frontend/: imm.cpp  imm.h
src/dynarmic/interface/: exclusive_monitor.h  halt_reason.h  optimization_flags.h
src/dynarmic/ir/: acc_type.h  basic_block.cpp  basic_block.h  ir_emitter.cpp  ir_emitter.h  location_descriptor.cpp  location_descriptor.h  microinstruction.cpp  microinstruction.h  opcodes.cpp  opcodes.h  opcodes.inc  terminal.h  type.cpp  type.h  value.cpp  value.h
src/frontend/: arm_types.cpp  arm_types.h  disassembler.h  disassembler_arm.cpp  disassembler_thumb.cpp  frontend_arm.h  imm.cpp  imm.h  ir_emitter.cpp  ir_emitter.h  translate.cpp  translate.h  translate_arm.cpp  translate_thumb.cpp  translate_thumb.h
src/frontend/A32/: FPSCR.h  ITState.h  PSR.h  ir_emitter.cpp  ir_emitter.h  location_descriptor.cpp  location_descriptor.h  types.cpp  (+1 more)
src/frontend_arm/: CMakeLists.txt  arm_disassembler.cpp  arm_disassembler.h  arm_types.h  ir_emitter.cpp  ir_emitter.h  translate_thumb.h
src/interface/: interface.h
src/ir/: basic_block.cpp  basic_block.h  ir_emitter.cpp  ir_emitter.h  location_descriptor.cpp  location_descriptor.h  microinstruction.cpp  microinstruction.h  opcodes.cpp  opcodes.h  opcodes.inc  terminal.h  type.cpp  value.cpp  value.h
src/ir_opt/: a32_constant_memory_reads_pass.cpp  a32_get_set_elimination_pass.cpp  a64_callback_config_pass.cpp  a64_get_set_elimination_pass.cpp  a64_merge_interpret_blocks.cpp  constant_propagation_pass.cpp  dead_code_elimination_pass.cpp  get_set_elimination_pass.cpp  identity_removal_pass.cpp  ir_matcher.h  passes.h  verification_pass.cpp
src/tests/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  all_tests.cpp  cpu_info.cpp  decoder_tests.cpp  fuzz_util.cpp  fuzz_util.h  main.cpp  mp.cpp  print_info.cpp  rand_int.h  rsqrt_test.cpp  rsqrt_test_fn.s  test_generator.cpp  test_reader.cpp  traits_tests.h  typelist_tests.h  x64_cpu_info.cpp
tests/A32/: fuzz_arm.cpp  fuzz_thumb.cpp  test_arm_disassembler.cpp  test_arm_instructions.cpp  test_coprocessor.cpp  test_svc.cpp  test_thumb_instructions.cpp  testenv.h
tests/A64/: a64.cpp  fibonacci.cpp  fp_min_max.cpp  fuzz_with_unicorn.cpp  inst_gen.cpp  inst_gen.h  misaligned_page_table.cpp  test_invalidation.cpp  testenv.h  verify_unicorn.cpp
tests/arm/: fuzz_arm.cpp  fuzz_thumb.cpp  test_arm_disassembler.cpp  test_thumb_instructions.cpp
tests/bit/: bit_field_tests.cpp
tests/fp/: FPToFixed.cpp  FPValue.cpp  mantissa_util_tests.cpp  unpacked_tests.cpp
tests/unicorn_emu/: a32_unicorn.cpp  a32_unicorn.h  a64_unicorn.cpp  a64_unicorn.h
(+688 files in other folders)
